# coresim

./: CMakeLists.txt
coresim/: CMakeLists.txt  coresim.c  coresim.h
coresim/math/: number.c  number.h  vector.c  vector.h
coresim/particles/: electron.c  electron.h
